Major changes and improvements made. Fix duplicated entries during retrieval, standartized formats, added new probes and capabilites, centrilized quest details in overlays removed reliance on old wiki quest guides, improved performance of retrieval and fixed bugs in MCP tooling.
Only thing left to do before final release:
- Documentation
- Deployment scripts for docker and PyPi.
- 2nd Audit over codebase.
